--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "extractor",
   "version": "1.0.0",
-  "description": "",
+  "description": "code extracts id3 information from mp3 files for metadata use",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Richard Littauer <richard.littauer@gmail.com> (http://burntfen.com)",
+  "keywords": {["id3", "mp3", "music"]},
+  "author": {"Richard Littauer <richard.littauer@gmail.com> (http://burntfen.com)"},
   "license": "=",
+  "homepage": { "https://github.com/RichardLitt/extract-id3-tags-from-mp3s" }
   "dependencies": {
     "musicmetadata": "^2.0.4"
   }
