--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": {["id3", "mp3", "music"]},
+  "keywords": {["id3", "mp3", "music"]},fff
   "author": {"Richard Littauer <richard.littauer@gmail.com> (http://burntfen.com)"},
   "license": "=",
   "homepage": { "https://github.com/RichardLitt/extract-id3-tags-from-mp3s" }
