--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name":"extractor",
   "version":"1.0.0",
   "description":"code extracts id3 information from mp3 files for metadata use",
-  "keywords":["id3","mp3","floss","music"],
-  "homepage":{
-    "https://github.com/RichardLitt/extract-id3-tags-from-mp3s"
-  },
-  "bugs":{
-    "url":"https://github.com/RichardLitt/extract-id3-tags-from-mp3s",
-    "email":"richard.littauer@gmail.com"
-         },
+  "keywords": ["id3","mp3","floss","music"],
+  "homepage": "https://github.com/RichardLitt/extract-id3-tags-from-mp3s",
+  "bugs": "https://github.com/RichardLitt/extract-id3-tags-from-mp3s/issues",
   "license": "MIT",
   "author": {"Richard Littauer <richard.littauer@gmail.com> (http://burntfen.com)"},
   "main":"index.js",
