--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "extract-id3-tags-from-mp3s",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Code extracts id3 information from mp3 files for metadata use",
   "homepage": "https://github.com/RichardLitt/extract-id3-tags-from-mp3s",
   "bugs": "https://github.com/RichardLitt/extract-id3-tags-from-mp3s/issues",
@@ -23,6 +23,8 @@
   "dependencies": {
     "musicmetadata": "^2.0.5"
   },
-  "contributors":
-  ["Adam Palazzo <palazzo.adam@gmail.com>", "Juliana Dixon <Juliana@burntfen.com"]
+  "contributors": [
+    "Adam Palazzo <palazzo.adam@gmail.com>",
+    "Juliana Dixon <Juliana@burntfen.com"
+  ]
 }
